# server/docs/swagger.json
@@ -14,9 +14,28 @@
         "version": "1.1"
     },
     "paths": {
+        "/api/health": {
+            "get": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Internals"
+                ],
+                "summary": "Liveness probe for this service",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/pdf/from/html-bundle/render": {
             "post": {
-                "description": "Returns PDF file generated from bundle (Zip-File) of HTML or HTML template of body, header, footer and assets. The index.html file in the Zip-Bundle is required.",
+                "description": "Returns PDF file generated from bundle (Zip-File) of HTML or HTML template of body, header, footer and assets. The index.html file in the Zip-Bundle is required",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -266,6 +285,7 @@
                     "type": "string"
                 },
                 "model": {
+                    "description": "Model with your data matching to the templates",
                     "type": "object"
                 },
                 "options": {
